cssFarb wiedergabe geht nicht

--- a/assets/home.html
+++ b/assets/home.html
@@ -6,14 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-<!--     <link rel="stylesheet" href="./css/style.css">
- --></head>
+  <link rel="stylesheet" href="./css/style.css">
+ </head>
 
 <body>
     <h1>Home Seite</h1>
 
     <a href="./home.html">Home</a>
-    <a href="../index.html">Index</a>
+    <a href="../">Index</a>
 </body>
 
 </html>
